--- a/logistic/cliente.html
+++ b/logistic/cliente.html
@@ -1,3 +1,5 @@
+
+
 <!doctype html>
 <html lang="en">
   <head>
@@ -6,100 +8,98 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <!-- CSS -->
-    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/alertify.min.css"/>
-    <!-- Default theme -->
-    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/themes/default.min.css"/>
-    <title>Alta Cliente</title>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/alertify.min.css"/>
+<!-- Default theme -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/themes/default.min.css"/>
+    <title>Registro Cliente</title>
     <style>
-      body{
-        background-color: #f7f6f6;
-      }
-      table thead{
-        background-color: #0a4f70;
-        color: white;
-      }
+        body{
+            background-color: #f7f6f6;
+        }
+        table thead{
+            background-color: #0a4f70;
+            color: white;
+        }
     </style>
   </head>
   <body>
 
-<div class="container mt-4 shadow-lg p-3 mb-5 bg-body rounded">
-  <button id="btnCreate" type="button" class="btn btn-primary" data-bs-toggle="modal">Crear cliente</button>
-  <table id="tablaCliente" class="table mt-2 table-bordered table-striped">
-    <thead>
-      <tr class="text-center">
-        <th>ID</th>
-        <th>Cliente</th>
-        <th>Dirección</th>
-        <th>Colonia</th>
-        <th>Ciudad</th>
-        <th>Estado</th>
-        <th>Teléfono</th>
-        <th>C.P.</th>
-        <th>Acciones</th>
-      </tr>
-    </thead>
-    <tbody>
-    </tbody>
-  </table>
-</div>
-
+    <div class="container mt-4 shadow-lg p-3 mb-5 bg-body rounded">
+        <button id="btnCrear" type="button" class="btn btn-primary" data-bs-toggle="modal"  data-bs-target="#modalCliente">Crear</button>
+        <table id="tablaCliente" class="table mt-2 table-bordered table-striped">
+            <thead>
+                <tr class="text-center">
+                  <th>ID</th>
+                  <th>Cliente</th>
+                  <th>Dirección</th>
+                  <th>Colonia</th>
+                  <th>Ciudad</th>
+                  <th>Estado</th>
+                  <th>Teléfono</th>
+                  <th>C.P.</th>
+                  <th>Acciones</th>
+                </tr>
+            </thead>
+            <tbody>
+            </tbody>
+        </table>
+    </div>
 
 <div id="modalCliente" class="modal fade" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header bg-primary text-white">
-        <h5 class="modal-title" id="exampleModalLabel">Registrar cliente nuevo</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Cliente</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
         <form>
           <div class="mb-3">
-            <label for="userName" class="col-form-label">Nombre Cliente:</label>
-            <input type="text" class="form-control" id="userName" autofocus>
+            <label for="userName" class="col-form-label">Cliente:</label>
+            <input id="userName" type="text" class="form-control" autofocus>
           </div>
           <div class="mb-3">
-            <label for="streetNum" class="col-form-label">Dirección:</label>
-            <input type="text" class="form-control" id="streetNum">
+            <label for="streetNum" class="col-form-label">Precio</label>
+            <input id="streetNum" type="text" class="form-control">
           </div>
           <div class="mb-3">
-            <label for="col" class="col-form-label">Colonia:</label>
-            <input type="text" class="form-control" id="col">
+            <label for="col" class="col-form-label">Colonia</label>
+            <input id="col" type="text" class="form-control">
           </div>
           <div class="mb-3">
-            <label for="city" class="col-form-label">Ciudad:</label>
-            <input type="text" class="form-control" id="city">
+            <label for="city" class="col-form-label">Ciudad</label>
+            <input id="city" type="text" class="form-control">
           </div>
           <div class="mb-3">
-            <label for="state" class="col-form-label">Estado:</label>
-            <input type="text" class="form-control" id="state">
+            <label for="state" class="col-form-label">Estado</label>
+            <input id="state" type="text" class="form-control">
           </div>
           <div class="mb-3">
-            <label for="telNum" class="col-form-label">Número teléfono:</label>
-            <input type="number" class="form-control" id="telNum">
+            <label for="telNum" class="col-form-label">Telefono</label>
+            <input id="telNum" type="number" class="form-control">
           </div>
           <div class="mb-3">
-            <label for="cp" class="col-form-label">Código Postal:</label>
-            <input type="number" class="form-control" id="cp">
+            <label for="cp" class="col-form-label">Codigo</label>
+            <input id="cp" type="number" class="form-control">
           </div>
-
-
+      </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-        <button type="submit" class="btn btn-primary">Registrar</button>
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="submit" class="btn btn-primary">Guardar</button>
       </div>
-      </form>
-      </div>
+    </form>
     </div>
   </div>
 </div>
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <!-- JavaScript -->
-    <script src="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/alertify.min.js"></script>
-    <script src="code.js" charset="utf-8"></script>
 
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+    <!-- JavaScript -->
+<script src="https://cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/alertify.min.js"></script>
+
+<script src="code.js"></script>
   </body>
 </html>
